Reformat SampleRetrievalState